--- a/package.json
+++ b/package.json
@@ -9,36 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.55",
+    "@ai-sdk/openai": "^0.0.70",
+    "@next/third-parties": "^15.0.3",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.59.15",
+    "@types/formidable": "^3.4.5",
+    "@types/pdf-parse": "^1.1.4",
+    "ai": "^3.4.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.484.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
     "openai": "^4.77.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.9.124",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.2.10",
+    "react-markdown": "^9.0.1",
     "react-select": "^5.9.0",
+    "resend": "^4.0.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.4",
     "uuid": "^11.0.3",
-    "tw-animate-css": "^1.2.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8",
