--- a/package.json
+++ b/package.json
@@ -44,7 +44,14 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@number-flow/react": "^0.5.7",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "chart.js": "^4.4.8",
+    "next-themes": "^0.4.5",
+    "react-chartjs-2": "^5.3.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
