--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@ai-sdk/openai": "^0.0.70",
     "@next/third-parties": "^15.0.3",
     "@notionhq/client": "^2.2.15",
+    "@number-flow/react": "^0.5.7",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
@@ -22,6 +25,9 @@
     "@types/formidable": "^3.4.5",
     "@types/pdf-parse": "^1.1.4",
     "ai": "^3.4.23",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formidable": "^3.5.2",
@@ -29,29 +35,29 @@
     "lucide-react": "^0.484.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.5",
+    "octokit": "^4.1.1",
     "openai": "^4.77.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.9.124",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.10",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-select": "^5.9.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.1",
     "resend": "^4.0.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8",
-    "@number-flow/react": "^0.5.7",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "chart.js": "^4.4.8",
-    "next-themes": "^0.4.5",
-    "react-chartjs-2": "^5.3.0",
-    "recharts": "^2.15.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -60,6 +66,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8",
