--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-domain-storage": "^2.0.7",
     "formidable": "^3.5.2",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.484.0",
