--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.484.0",
+    "marked": "^15.0.11",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
