--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.59.15",
     "@types/formidable": "^3.4.5",
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-domain-storage": "^2.0.7",
+    "embla-carousel-react": "^8.6.0",
     "formidable": "^3.5.2",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.484.0",
