--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "^15.0.3",
     "@notionhq/client": "^2.2.15",
     "@number-flow/react": "^0.5.7",
+    "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.3",
