--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-domain-storage": "^2.0.7",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "formidable": "^3.5.2",
     "framer-motion": "^11.14.4",
