--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "embla-carousel-react": "^8.6.0",
     "formidable": "^3.5.2",
     "framer-motion": "^11.14.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.484.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.5",
     "octokit": "^4.1.1",
     "openai": "^4.77.0",
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
