--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.6",
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.59.15",
     "@types/formidable": "^3.4.5",
     "@types/pdf-parse": "^1.1.4",
+    "adm-zip": "^0.5.16",
     "ai": "^3.4.23",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
@@ -37,7 +38,7 @@
     "cross-domain-storage": "^2.0.7",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "formidable": "^3.5.2",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.14.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.484.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/adm-zip": "^0.5.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
