--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.55",
     "@ai-sdk/openai": "^0.0.70",
+    "@hookform/resolvers": "^5.1.1",
     "@next/third-parties": "^15.0.3",
     "@notionhq/client": "^2.2.15",
     "@number-flow/react": "^0.5.7",
@@ -22,7 +23,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.59.15",
@@ -44,7 +45,7 @@
     "lucide-react": "^0.484.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.4",
-    "next-themes": "^0.4.5",
+    "next-themes": "^0.4.6",
     "octokit": "^4.1.1",
     "openai": "^4.77.0",
     "pdf-parse": "^1.1.1",
@@ -54,6 +55,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.10",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-select": "^5.9.0",
@@ -61,11 +63,12 @@
     "recharts": "^2.15.1",
     "resend": "^4.0.1",
     "shadcn-ui": "^0.9.4",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
