--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/react-dom": "^19.2.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoevals": "^0.0.131",
+    "dotenv": "^17.2.3",
     "eslint": "^9.37.0",
     "eslint-config-next": "15.2.4",
     "evalite": "^0.19.0",
