--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.10.38",
+    "posthog-js": "^1.316.0",
+    "posthog-node": "^5.20.0",
     "prettier": "^3.6.2",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
