--- a/example.env
+++ b/example.env
@@ -16,3 +16,6 @@ NOTION_DATABASE_ID=
 OPENAI_API_KEY=sk-proj-
 
 RESEND_KEY=re_
+
+NEXT_PUBLIC_POSTHOG_KEY=phc_
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
