--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "@next/third-parties": "^15.5.4",
     "@notionhq/client": "^2.3.0",
     "@number-flow/react": "^0.5.10",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-pdf/renderer": "^4.3.1",
@@ -48,7 +48,7 @@
     "formidable": "^3.5.4",
     "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.484.0",
+    "lucide-react": "^0.562.0",
     "multer": "^1.4.5-lts.2",
     "next": "^15.5.9",
     "next-themes": "^0.4.6",
@@ -61,15 +61,15 @@
     "prettier": "^3.6.2",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^9.11.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.70.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
     "react-select": "^5.10.2",
     "react-syntax-highlighter": "^15.6.6",
-    "recharts": "^2.15.4",
+    "recharts": "2.15.4",
     "resend": "^4.8.0",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.7",
@@ -77,7 +77,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.76"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
